--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "siligongjs2.1",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "license": "MIT",
   "scripts": {
     "start": "node ./luckydoor.js"
