- cache profile images between runs/ - don't remove organisers - don't limit attendee pool

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "clear": "^0.1.0",
+    "file-system-cache": "^2.4.4",
     "immer": "^2.0.0",
     "lodash": "^4.17.11",
     "node-fetch": "^2.3.0",
